# discord

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.jsonc  modalerts.json
.bin/: librespot-wrapper.example
scripts/: get_spotify_refresh_token.sh  run-voice-client.sh  setup.sh
src/: config.rs  main.rs  modalert.rs  music.rs  start.rs
tools/librespot-wrapper/: Cargo.toml  README.md
tools/librespot-wrapper/src/: main.rs
