[package]
name = "discord"
# year.major.minor
version = "26.0.2"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "framework", "cache"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
songbird = { version = "0.4.6", features = ["serenity", "driver"] }
# Enable Symphonia formats/codec features so Songbird can probe transcodes and streams
symphonia = { version = "0.5.5", default-features = false, features = ["wav", "mkv", "ogg", "vorbis", "isomp4", "aac", "mp3", "pcm"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
json5 = "0.4"
